Bug 723163 - Improve about:crashes copy & paste by improving XHTML text/plain encoding. r=hsivonen,njn